# neural_network_cpp

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cu
include/neuralnetwork/: Layer.h  LinearLayer.h  NeuralNetwork.h  ReLULayer.h  SigmoidLayer.h
include/utils/: Dataset.h  InvalidShapeException.h  MNISTDataset.h  Matrix.h
src/: CMakeLists.txt
src/neuralnetwork/: CMakeLists.txt  LinearLayer.cu  NeuralNetwork.cu  ReLULayer.cu  SigmoidLayer.cu
src/utils/: CMakeLists.txt  MNISTDataset.cpp  Matrix.cu
tests/: CMakeLists.txt  test.cpp
